# research_assistant

./: main.py
agents/: .gitignore  requirements.txt
agents/app/: README.md  pyproject.toml
agents/app/src/: main.py
agents/app/src/services/speech/: stt.py  tts.py
agents/app/src/services/vision/: ocr.py  read_file_text.py  text_file_manager.py
agents/app/src/utils/: state.py  theme.py
agents/app/src/views/: chat_view.py  root_view.py
agents/backend/: app.py  pyproject.toml  settings.py
agents/backend/pages/: index.py
agents/backend/research_assistant/: .gitignore  README.md  pyproject.toml
agents/backend/research_assistant/src/research_assistant/: main.py
agents/backend/research_assistant/src/research_assistant/config/: llms.py
agents/backend/research_assistant/src/research_assistant/crews/analyst/: analyst.py
agents/backend/research_assistant/src/research_assistant/crews/analyst/config/: agents.yaml  tasks.yaml
agents/backend/research_assistant/src/research_assistant/crews/presenter/: presenter.py
agents/backend/research_assistant/src/research_assistant/crews/presenter/config/: agents.yaml
agents/backend/research_assistant/src/research_assistant/crews/researcher/: researcher.py
agents/backend/research_assistant/src/research_assistant/crews/researcher/config/: agents.yaml  tasks.yaml
agents/backend/research_assistant/src/research_assistant/crews/writer/: writer.py
agents/backend/research_assistant/src/research_assistant/crews/writer/config/: agents.yaml  tasks.yaml
