[project]
name = "research_assistant"
version = "0.1.0"
description = "research_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.10.1",
]

[project.scripts]
kickoff = "research_assistant.main:kickoff"
run_crew = "research_assistant.main:kickoff"
plot = "research_assistant.main:plot"
run_with_trigger = "research_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
